--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularWeatherApp</title>
+  <title>Angular Weather App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="firstload">Loading app <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-root>
 </body>
 </html>
