--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root class="firstload">Loading app <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-root>
+  <div id="d"></div>
+  <script>
+    var d = document.getElementById("d");
+    navigator.geolocation.getCurrentPosition(
+      function(position){
+
+        d.innerHTML = "Ваши координаты широта:" + " " + position.coords.latitude + " " + "Долгота" + " " + position.coords.longitude + " " 
+        + " точность определения: " + position.coords.accuracy;
+      });
+  </script>
+
+  <app-root>Loading app <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-root>
 </body>
 </html>
