update app to stable working version
stable working version of the application is 1.0

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 </head>
 
 <body>
-  <app-root>Loading app <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-root>
+  <app-root>Loading Angular Weather Application <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-root>
 </body>
 </html>
